--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport"
           content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
     <title>vue-blog</title>
+    <link rel="stylesheet" href="//at.alicdn.com/t/font_272268_r1xp16rw4i5p14i.css">
   </head>
   <body>
     <div id="app"></div>
