--- a/index.html
+++ b/index.html
@@ -10,5 +10,10 @@
   <body>
     <div id="app"></div>
     <!-- built files will be auto injected -->
+    <!-- <script src="https://cdn.socket.io/socket.io-1.2.0.js"></script> -->
+    <script src="/socket.io/socket.io.js"></script>
+    <script type="text/javascript">
+    
+    </script>
   </body>
 </html>
